[gd_scene load_steps=4 format=3 uid="uid://c8x7r4p3m6vwj"]

[ext_resource type="Script" path="res://scripts/items/item_world.gd" id="1_item"]
[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://icon.svg" id="2_icon"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pickup"]
radius = 32.0

[node name="ItemWorld" type="Area2D"]
collision_layer = 8
collision_mask = 1
script = ExtResource("1_item")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.9)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_icon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pickup")

[node name="Label" type="Label" parent="."]
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "物品"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
